<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="online.klok.restapp.MainActivity">
    <item android:id="@+id/action_users"
        android:orderInCategory="100"
        android:title="@string/action_users"
        app:showAsAction="never" />
    <item android:id="@+id/action_floor"
        android:orderInCategory="100"
        android:title="@string/action_floor"
        app:showAsAction="never" />
    <item android:id="@+id/action_cardBalance"
        android:orderInCategory="100"
        android:title="@string/action_cardBalance"
        app:showAsAction="never" />
    <item android:id="@+id/action_cardDetails"
        android:orderInCategory="100"
        android:title="@string/action_cardDetails"
        app:showAsAction="never" />
    <item android:id="@+id/action_categories"
        android:orderInCategory="100"
        android:title="@string/action_categories"
        app:showAsAction="never" />
    <item android:id="@+id/action_extras"
        android:orderInCategory="100"
        android:title="@string/action_extras"
        app:showAsAction="never" />
    <item android:id="@+id/action_item"
        android:orderInCategory="100"
        android:title="@string/action_item"
        app:showAsAction="never" />
    <item android:id="@+id/action_modifiers"
        android:orderInCategory="100"
        android:title="@string/action_modifiers"
        app:showAsAction="never" />
    <item android:id="@+id/action_order"
        android:orderInCategory="100"
        android:title="@string/action_order"
        app:showAsAction="never" />
    <item android:id="@+id/action_orderItemDetails"
        android:orderInCategory="100"
        android:title="@string/action_orderItemDetails"
        app:showAsAction="never" />
    <item android:id="@+id/action_orderPlaces"
        android:orderInCategory="100"
        android:title="@string/action_orderPlaces"
        app:showAsAction="never" />
    <item android:id="@+id/action_subcategories"
        android:orderInCategory="100"
        android:title="@string/action_subcategories"
        app:showAsAction="never" />
    <item android:id="@+id/action_master"
        android:orderInCategory="100"
        android:title="@string/action_master"
        app:showAsAction="never" />
    <item android:id="@+id/action_location"
        android:orderInCategory="100"
        android:title="@string/action_location"
        app:showAsAction="never" />

</menu>